--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ font-family: Arial, Helvetica, sans-serif;
 
 .textcolor{
     color: var(--colorB);
+    font-weight: bold;
+    font-size: 18px;
 }
 #main-title{
 color: var(--colorD);
@@ -104,4 +106,6 @@ border-radius: 15px;
     margin: 10px auto;
     background-color: var(--colorD);
     border-bottom:5px solid var(--colorA) ;
+    border-radius: 5px;
+    
 }
